--- a/projects/sort/src/CMakeLists.txt
+++ b/projects/sort/src/CMakeLists.txt
@@ -1,3 +1,9 @@
-project(insertion_sort)
+target_sources(sort 
+	PRIVATE
+		bubble_sort.cpp
+		bubble_sort.hpp
+)
 
-add_executable(${PROJECT_NAME} main.cpp)
+target_include_directories(sort PRIVATE
+	"${PROJECT_SOURCE_DIR}/src"
+)
