--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -1,5 +1,8 @@
-project(modern_programming_spring1)
+cmake_minimum_required(VERSION 3.5)
+project(projects)
 
-add_subdirectory(sort)
 add_subdirectory(obuchaika)
+add_subdirectory(sort)
+
+set(CMAKE_SUPPRESS_REGENERATION true)
 
