--- a/projects/sort/src/CMakeLists.txt
+++ b/projects/sort/src/CMakeLists.txt
@@ -1,9 +1,8 @@
-target_sources(sort 
-	PRIVATE
-		bubble_sort.cpp
-		bubble_sort.hpp
+target_sources(insertion_sort_lib 
+    PRIVATE 
+        insertion_sort.cpp
 )
 
-target_include_directories(sort PRIVATE
-	"${PROJECT_SOURCE_DIR}/src"
+target_include_directories(insertion_sort_lib PUBLIC
+    "${PROJECT_SOURCE_DIR}/src"
 )
