[CMakeLists & .gitignore] fixed issues

--- a/projects/sort/src/CMakeLists.txt
+++ b/projects/sort/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 target_sources(insertion_sort_lib 
     PRIVATE 
-        insertion_sort.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/insertion_sort.cpp
 )
 
 target_include_directories(insertion_sort_lib PUBLIC
-    "${PROJECT_SOURCE_DIR}/src"
+    "${PROJECT_SOURCE_DIR}/sort/src"
 )
