--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.5)
 project(projects)
 
+enable_testing()
+add_subdirectory(lib/googletest)
+
 add_subdirectory(obuchaika)
 add_subdirectory(sort)
 
