--- a/projects/sort/CMakeLists.txt
+++ b/projects/sort/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(sort)
 
-add_library(insertion_sort_lib)
+set(SCL_LIB "insertion_sort")
+add_library(${SCL_LIB} "")
 
 add_subdirectory(src)
 add_subdirectory(test)
