--- a/projects/sort/src/CMakeLists.txt
+++ b/projects/sort/src/CMakeLists.txt
@@ -1,8 +1,8 @@
-target_sources(insertion_sort_lib 
+target_sources(${SCL_LIB}  
     PRIVATE 
         ${CMAKE_CURRENT_SOURCE_DIR}/insertion_sort.cpp
 )
 
-target_include_directories(insertion_sort_lib PUBLIC
+target_include_directories(${SCL_LIB} PUBLIC
     "${PROJECT_SOURCE_DIR}/sort/src"
 )
