[sort] fixed errors also added fall term projects

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -4,8 +4,11 @@ project(projects)
 enable_testing()
 add_subdirectory(lib/googletest)
 
-add_subdirectory(obuchaika)
 add_subdirectory(sort)
+add_subdirectory(obuchaika)
+add_subdirectory(insertion_sort)
+add_subdirectory(insertion_sort_mf)
+
 
 set(CMAKE_SUPPRESS_REGENERATION true)
 
