--- a/projects/sort/CMakeLists.txt
+++ b/projects/sort/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(sort)
 
-set(SCL_LIB "insertion_sort")
+set(SCL_LIB "insertion_sort_lib")
 add_library(${SCL_LIB} "")
 
 add_subdirectory(src)
