--- a/projects/sort/src/CMakeLists.txt
+++ b/projects/sort/src/CMakeLists.txt
@@ -1,8 +1,10 @@
-target_sources(${SCL_LIB}  
-    PRIVATE 
-        ${CMAKE_CURRENT_SOURCE_DIR}/insertion_sort.cpp
+target_sources(${SCL_LIB} 
+    PRIVATE
+        ${PROJECT_SOURCE_DIR}/src/insertion_sort.cpp
+    PUBLIC
+        ${PROJECT_SOURCE_DIR}/src/insertion_sort.hpp
 )
 
 target_include_directories(${SCL_LIB} PUBLIC
-    "${PROJECT_SOURCE_DIR}/sort/src"
+    "${PROJECT_SOURCE_DIR}/src"
 )
