[insertion_sort_mf] add changes

--- a/projects/insertion_sort_mf/CMakeLists.txt
+++ b/projects/insertion_sort_mf/CMakeLists.txt
@@ -1,6 +1,10 @@
 project(insertion_sort_mf)
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME}
+    main.cpp
+    sortings/sortings.cpp
+    io/io.cpp
+)
 
 add_subdirectory(sortings)
 add_subdirectory(io)
